# musicDownloader

./: .gitignore  README.md  main.py  music_downloader.db  pyproject.toml  test.txt
audit/: ambiguous_logger.py  audit.py  scoring_debugger.py
cli/: commands.py  ui.py
config/: settings.py  settings.yaml
core/: ambiguous_logger.py  audio_format.py  audit.py  duplicate_detector.py  enums.py  exceptions.py  flags.py  models.py  normalizer.py  parser.py  ranking_analyzer.py  scorer.py  scoring_debugger.py
database/: engine.py  models.py  repository.py
download/: download_manager.py  youtube_downloader.py
downloader/: yt_downloader.py
downloads/: Avicii - Levels.m4a
logs/services/: logger_service.py
providers/: base.py  youtube_provider.py
services/: duplicate_detector.py  logger_service.py  ranking_analyzer.py  scorer.py
storage/: database.py  download_repository.py
tests/: test_settings.py
